Finished base code, make two branches Script and Style, and work on them.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="calculatorContainer">
+        <div class="calculator">
+            <div class="display"></div>
+            <div class="buttons">
+                <button id="btnSeven" class="key"></button>
+                <button id="btnEight" class="key"></button>
+                <button id="btnNine" class="key"></button>
+                <button id="btnAC" class="key"></button>
+                <button id="btnC" class="key"></button>
+                <button id="btnFour" class="key"></button>
+                <button id="btnFive" class="key"></button>
+                <button id="btnSix" class="key"></button>
+                <button id="btnPlus" class="key"></button>
+                <button id="btnMinus" class="key"></button>
+                <button id="btnOne" class="key"></button>
+                <button id="btnTwo" class="key"></button>
+                <button id="btnThree" class="key"></button>
+                <button id="btnTimes" class="key"></button>
+                <button id="btnDevide" class="key"></button>
+                <button id="btnPosNeg" class="key"></button>
+                <button id="btnZero" class="key"></button>
+                <button id="btnComma" class="key"></button>
+                <button id="btnEquals" class="key"></button>
+            </div>
+        </div>
+    </div>
+    <div class="Footer">Stefan Ilic&copy;</div>
 </body>
 </html>
