Started working on the script. So far made the power button work, and made some basic math operations

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="calculatorContainer">
         <div class="calculator">
             <div class="display">
-                <div class="result">125</div>
-                <div class="digits">100 + 25</div>
+                <div class="result"></div>
+                <div class="digits"></div>
             </div>
             <div class="power">
             <div class="status"></div>
@@ -51,5 +51,6 @@
 <div class="footer">
     <a class="github" href="https://github.com/Stefann93">Stefan Ilic &copy;</a>
 </div>
+<script src="./script.js"></script>
 </body>
 </html>
