Started working on Script branch Things left to do: Fix the "C" button, right now it just removes the last character on the display, but keeps number variable as it was. Add function to the "." button. Make it so that when I press an operand it check if I have the result and if I do, it makes that result the first number. Make dividing by 0 impossible.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,50 +8,52 @@
     <link rel="stylesheet" href="style.css" />
     <!--#region Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <!--#endregion Font -->
     <title>Calculator</title>
 </head>
+
 <body>
     <div class="container">
-    <div class="calculatorContainer">
-        <div class="calculator">
-            <div class="display">
-                <div class="result"></div>
-                <div class="digits"></div>
-            </div>
-            <div class="power">
-            <div class="status"></div>
-            <button class="powerBtn"><img src="./images/power.png" alt="Power Button" /></button>
-            </div>
-            <div class="buttons">
-                <button id="btnSeven" class="key">7</button>
-                <button id="btnEight" class="key">8</button>
-                <button id="btnNine" class="key">9</button>
-                <button id="btnAC" class="key specialKey">AC</button>
-                <button id="btnC" class="key specialKey">C</button>
-                <button id="btnFour" class="key">4</button>
-                <button id="btnFive" class="key">5</button>
-                <button id="btnSix" class="key">6</button>
-                <button id="btnPlus" class="key specialKey">+</button>
-                <button id="btnMinus" class="key specialKey">-</button>
-                <button id="btnOne" class="key">1</button>
-                <button id="btnTwo" class="key">2</button>
-                <button id="btnThree" class="key">3</button>
-                <button id="btnTimes" class="key specialKey">X</button>
-                <button id="btnDevide" class="key specialKey">/</button>
-                <button id="btnZero" class="key">0</button>
-                <button id="btnEquals" class="key doubleKey specialKey">=</button>
-                <button id="btnComma" class="key specialKey">.</button>
-                <button id="btnPosNeg" class="key specialKey">+/-</button>
+        <div class="calculatorContainer">
+            <div class="calculator">
+                <div class="display">
+                    <div class="result"></div>
+                    <div class="digits"></div>
+                </div>
+                <div class="power">
+                    <div class="status"></div>
+                    <button class="powerBtn"><img src="./images/power.png" alt="Power Button" /></button>
+                </div>
+                <div class="buttons">
+                    <button class="key number">7</button>
+                    <button class="key number">8</button>
+                    <button class="key number">9</button>
+                    <button id="ac" class="key specialKey">AC</button>
+                    <button id="c" class="key specialKey">C</button>
+                    <button class="key number">4</button>
+                    <button class="key number">5</button>
+                    <button class="key number">6</button>
+                    <button class="key specialKey operand">+</button>
+                    <button class="key specialKey operand">-</button>
+                    <button class="key number">1</button>
+                    <button class="key number">2</button>
+                    <button class="key number">3</button>
+                    <button class="key specialKey operand">X</button>
+                    <button class="key specialKey operand">/</button>
+                    <button class="key number">0</button>
+                    <button id="equals" class="key doubleKey specialKey">=</button>
+                    <button class="key specialKey">.</button>
+                    <button id="sign" class="key specialKey">+/-</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="footer">
-    <a class="github" href="https://github.com/Stefann93">Stefan Ilic &copy;</a>
-</div>
-<script src="./script.js"></script>
+    <div class="footer">
+        <a class="github" href="https://github.com/Stefann93">Stefan Ilic &copy;</a>
+    </div>
+    <script src="./script.js"></script>
 </body>
+
 </html>
