Project Complete! There is a small issue, you can't keep clicking operands, need to click equals first for it to make the result the first operand.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <button class="key specialKey operand">/</button>
                     <button class="key number">0</button>
                     <button id="equals" class="key doubleKey specialKey">=</button>
-                    <button class="key specialKey">.</button>
+                    <button id="comma" class="key specialKey">.</button>
                     <button id="sign" class="key specialKey">+/-</button>
                 </div>
             </div>
